# CuteOwl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: macos.yml
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/CuteOwl/: CMakeLists.txt  Core.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OwlApplication.cpp  OwlApplication.h  ServerPanel.cpp  ServerPanel.h  SplashScreen.cpp  SplashScreen.h  TitlebarSetupMac.mm  main.cpp
src/CuteOwl/res/: CuteOwl.qmlproject  Owl.qrc
src/CuteOwl/res/qml/: main.qml  serverPanel.qml
src/MyLib/: CMakeLists.txt  MyClass.cpp  MyClass.h
test/: testmain.cpp
